<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/ivThumbnail"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/nowplaying_movie_poster"
        android:layout_width="@dimen/listitem_image_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/nowplaying_movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?textAppearanceListItem"/>
</LinearLayout>
